--- a/com.DigitalTwin/pom.xml
+++ b/com.DigitalTwin/pom.xml
@@ -78,7 +78,15 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
     </dependency>
-  
+
+<!---
+<dependency>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>chromedriver</artifactId>
+    <version>1.2</version>
+</dependency>
+-->
+
   </dependencies>
 
   <build>
@@ -101,6 +109,11 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <suiteXmlFiles>
+              <suiteXmlFile>TestNG.xml</suiteXmlFile>
+            </suiteXmlFiles>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
