com.DigitalTwin/Config/env.properties

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -1,3 +1,10 @@
-Apass =C:\\Users\\Dell\\Downloads\\com.DigitalTwin(2)\\com.DigitalTwin\\forgetPasskey_Dictonary.txt
-Cpass =C:\\Users\\Dell\\Downloads\\com.DigitalTwin(2)\\com.DigitalTwin\\Cust_forgetPasskey.txt
-csvpath =C:\\Users\\Dell\\Downloads\\com.DigitalTwin(2)\\com.DigitalTwin\\Resources\\batch-1-23x.csv
+#Apass =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\forgetPasskey_Dictonary.txt
+#Cpass =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Cust_forgetPasskey.txt
+#csvpath =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Resources\\batch-1-23x.csv
+
+Apass =forgetPasskey_Dictonary.txt
+Cpass =Cust_forgetPasskey.txt
+csvpath =Resources\\batch-1-23x.csv
+
+Admin =dinesh@eminds.ai 
+Customer =eminds.edge@gmail.com
