updated env driver paths

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -8,3 +8,5 @@ csvpath =Resources\\batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
 Customer =eminds.edge@gmail.com
+
+Wdriverloc =chome\\chromedriver.exe
