linux/windows driver update

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -9,4 +9,5 @@ csvpath =Resources\\batch-1-23x.csv
 Admin =dinesh@eminds.ai 
 Customer =eminds.edge@gmail.com
 
-Wdriverloc =chome\\chromedriver.exe
+Wdriverloc =windows_chrome\chromedriver.exe
+Ldriverloc=linux_chrome/chromedriver.exe
