test-case logs and search user - updated

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -7,7 +7,10 @@ Cpass =Cust_forgetPasskey.txt
 csvpath =Resources\\batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
-Customer =eminds.edge@gmail.com
+Customer =eminds.jenkins@gmail.com
 
 Wdriverloc =windows_chrome\chromedriver.exe
-Ldriverloc=linux_chrome/chromedriver.exe
+Ldriverloc =linux_chrome/chromedriver.exe
+
+ConfigReader =Config\\config.properties
+LogReader =Config\\log4j.properties
