file path updated /

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -4,13 +4,16 @@
 
 Apass =forgetPasskey_Dictonary.txt
 Cpass =Cust_forgetPasskey.txt
-csvpath =Resources\\batch-1-23x.csv
+csvpath =Resources/batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
 Customer =eminds.jenkins@gmail.com
 
-Wdriverloc =windows_chrome\chromedriver.exe
+Wdriverloc =windows_chrome/chromedriver.exe
 Ldriverloc =linux_chrome/chromedriver.exe
 
-ConfigReader =Config\\config.properties
-LogReader =Config\\log4j.properties
+#ConfigReader =Config\\config.properties
+#LogReader =Config\\log4j.properties
+
+ConfigReader =Config/config.properties
+LogReader =Config/log4j.properties
