--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -4,7 +4,7 @@
 
 Apass =forgetPasskey_Dictonary.txt
 Cpass =Cust_forgetPasskey.txt
-csvpath =Resources/batch-1-23x.csv
+csvpath =/home/eminds/jenkins/workspace/sample-testngv1/com.DigitalTwin/Resources/batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
 Customer =eminds.jenkins@gmail.com
