--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -4,7 +4,7 @@
 
 Apass =forgetPasskey_Dictonary.txt
 Cpass =Cust_forgetPasskey.txt
-csvpath =/home/eminds/jenkins/workspace/sample-testngv1/com.DigitalTwin/Resources/batch-1-23x.csv
+csvpath =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Resources\\batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
 Customer =eminds.jenkins@gmail.com
