admin and customer switch-pw-updates

--- a/com.DigitalTwin/Config/env.properties
+++ b/com.DigitalTwin/Config/env.properties
@@ -2,8 +2,8 @@
 #Cpass =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Cust_forgetPasskey.txt
 #csvpath =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Resources\\batch-1-23x.csv
 
-Apass =forgetPasskey_Dictonary.txt
-Cpass =Cust_forgetPasskey.txt
+Apass =ChangePasskey_Dictonary.txt
+Cpass =Cust_ChangePasskey.txt
 csvpath =C:\\Users\\Dell\\Downloads\\com.DigitalTwin_Local\\em-twin-uat\\com.DigitalTwin\\Resources\\batch-1-23x.csv
 
 Admin =dinesh@eminds.ai 
@@ -17,3 +17,10 @@ Ldriverloc =linux_chrome/chromedriver.exe
 
 ConfigReader =Config/config.properties
 LogReader =Config/log4j.properties
+
+repPath =Extentrereport\DTAextreport.html
+
+
+
+#Apass1 =Eminds@1
+#Apass2 =Eminds@2
