--- a/com.DigitalTwin/.classpath
+++ b/com.DigitalTwin/.classpath
@@ -14,20 +14,21 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -36,5 +37,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/extentreports-5.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/freemarker-2.3.32.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/gson-2.10.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/lombok-1.18.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/reactive-streams-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dell/Downloads/jar_files/rxjava-3.1.6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
